--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/mail": "^3.0.9",
     "adonis-nextjs": "^3.1.1",
-    "next": "^7.0.2",
+    "ln-service": "^34.6.0",
+    "next": "^8.0.3",
     "nodemon": "^1.18.9",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": "^16.8.5",
+    "react-dom": "^16.8.5"
   },
   "devDependencies": {},
   "autoload": {
