--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/mail": "^3.0.9",
+    "@adonisjs/websocket": "^1.0.11",
     "adonis-nextjs": "^3.1.1",
+    "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "ln-service": "^34.6.0",
+    "mysql": "^2.16.0",
     "next": "^8.0.3",
     "nodemon": "^1.18.9",
     "react": "^16.8.5",
