add websocket and ln-service connection

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,12 @@ DB_DATABASE=adonis
 
 HASH_DRIVER=bcrypt
 NEXT_FOLDER=next
+
+LND_TYPE=btcpay or lnd
+GRPC_SSL_CIPHER_SUITES=ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256 for btcpay or HIGH+ECDSA for lnd
+NODE_IP=443 for btcpay or 10009 for lnd
+NODE_PORT=localhost
+LND_CERT=Only if lnd (in LND_TYPE) is used
+LND_MACAROON=
+LND_PUBKEY=
+LND_PORT=9735
