--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/mail": "^3.0.9",
     "@adonisjs/websocket": "^1.0.11",
+    "@adonisjs/websocket-client": "^1.0.9",
+    "@zeit/next-css": "^1.0.1",
     "adonis-nextjs": "^3.1.1",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
@@ -38,8 +40,10 @@
     "mysql": "^2.16.0",
     "next": "^8.0.3",
     "nodemon": "^1.18.9",
+    "qrcode": "^1.3.3",
     "react": "^16.8.5",
-    "react-dom": "^16.8.5"
+    "react-dom": "^16.8.5",
+    "react-toastify": "^5.0.0-rc.3"
   },
   "devDependencies": {},
   "autoload": {
